--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -9,13 +9,15 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/appToolbar"
+        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/app_name"
-        app:titleTextColor="?colorOnPrimary" />
+        app:titleTextColor="?colorOnPrimary"
+        app:menu="@menu/desktop_menu"/>
 
     <TextView
         android:id="@+id/deviceInfoTextView"
@@ -23,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="36dp"
         android:drawablePadding="@dimen/margin4"
+        android:drawableTint="@color/blue_gray_700"
         app:drawableLeftCompat="@drawable/ic_baseline_settings_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +51,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/appToolbar"
         tools:layout_editor_absoluteX="36dp">
 
         <!--        <ImageView-->
