--- a/app/src/main/res/menu/desktop_menu.xml
+++ b/app/src/main/res/menu/desktop_menu.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/menu_settings"
-        android:icon="@drawable/ic_baseline_settings_24"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_exit"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
         android:title="@string/menu_exit"
-        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
+        app:showAsAction="ifRoom" />
 </menu>
