--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorSecondary">@color/blue_gray_200</item>
         <item name="colorSecondaryVariant">@color/blue_gray_200</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorControlNormal">@android:color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -18,4 +19,5 @@
         <item name="fullscreenBackgroundColor">@color/light_blue_900</item>
         <item name="fullscreenTextColor">@color/light_blue_A400</item>
     </style>
+
 </resources>
