--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorSecondary">@color/blue_gray_200</item>
         <item name="colorSecondaryVariant">@color/blue_gray_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorControlNormal">@android:color/white</item>
         <item name="android:textColorSecondary">@color/black</item>
 
         <!-- Status bar color. -->
@@ -20,4 +21,5 @@
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
+
 </resources>
