--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -26,7 +26,8 @@
         tools:layout="@layout/fragment_desktop">
         <action
             android:id="@+id/action_desktopFragment_to_tableScanFragment"
-            app:destination="@id/tableScanFragment" />
+            app:destination="@id/tableScanFragment"
+            app:popUpTo="@id/desktopFragment" />
     </fragment>
     <fragment
         android:id="@+id/tableScanFragment"
@@ -34,24 +35,17 @@
         android:label="fragment_table_scan"
         tools:layout="@layout/fragment_table_scan">
         <action
-            android:id="@+id/action_tableScanFragment_to_authFragment"
-            app:destination="@id/authFragment" />
-        <action
-            android:id="@+id/action_tableScanFragment_to_desktopFragment"
-            app:destination="@id/desktopFragment" />
-        <action
             android:id="@+id/action_tableScanFragment_to_detailScanFragment"
             app:destination="@id/detailScanFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right"
+            app:popUpTo="@id/tableScanFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailScanFragment"
         android:name="ru.tn.shinglass.activity.DetailScanFragment"
         android:label="fragment_detail_scan"
-        tools:layout="@layout/fragment_detail_scan" >
-        <action
-            android:id="@+id/action_detailScanFragment_to_tableScanFragment"
-            app:destination="@id/tableScanFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_detail_scan" />
 </navigation>
