--- a/app/src/main/res/layout/fragment_detail_scan.xml
+++ b/app/src/main/res/layout/fragment_detail_scan.xml
@@ -24,30 +24,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_tn" />
 
+    <LinearLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/operationTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/buttonApply"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="16dp"
+            android:text="@string/apply_text"
+            app:icon="@drawable/ic_baseline_check_24" />
+    </LinearLayout>
+
     <ScrollView
         android:id="@+id/scanFormScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/headerLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".activity.DetailScanFragment">
+            android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/operationTitleTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="24sp" />
 
             <!--            <TextView-->
             <!--                android:id="@+id/divisionTextView"-->
@@ -77,15 +93,16 @@
                     android:imeOptions="actionDone"
                     android:inputType="none"
                     android:maxLines="1" />
+
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/warehouseTextView"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="@dimen/margin4"-->
-<!--                android:textSize="16sp"-->
-<!--                tools:text="Склад" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/warehouseTextView"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/margin4"-->
+            <!--                android:textSize="16sp"-->
+            <!--                tools:text="Склад" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/warehouseTextInputLayout"
@@ -99,13 +116,13 @@
                 app:errorEnabled="true"
                 app:startIconDrawable="@drawable/ic_baseline_warehouse_24">
 
-<!--                <com.google.android.material.textfield.TextInputEditText-->
-<!--                    android:id="@+id/warehouseTextView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:imeOptions="actionDone"-->
-<!--                    android:inputType="text"-->
-<!--                    android:maxLines="1" />-->
+                <!--                <com.google.android.material.textfield.TextInputEditText-->
+                <!--                    android:id="@+id/warehouseTextView"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:imeOptions="actionDone"-->
+                <!--                    android:inputType="text"-->
+                <!--                    android:maxLines="1" />-->
                 <AutoCompleteTextView
                     android:id="@+id/warehouseTextView"
                     android:layout_width="match_parent"
@@ -113,17 +130,17 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/purposeOfUseTextView"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="@dimen/margin4"-->
-<!--                android:autoLink="none"-->
-<!--                android:clickable="true"-->
-<!--                android:linksClickable="false"-->
-<!--                android:textSize="16sp"-->
-<!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
-<!--                tools:text="Назначение использования" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/purposeOfUseTextView"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/margin4"-->
+            <!--                android:autoLink="none"-->
+            <!--                android:clickable="true"-->
+            <!--                android:linksClickable="false"-->
+            <!--                android:textSize="16sp"-->
+            <!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
+            <!--                tools:text="Назначение использования" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/purposeOfUseTextInputLayout"
@@ -147,17 +164,17 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-<!--            <TextView-->
-<!--                android:id="@+id/phisicalPersonTextView"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="@dimen/margin4"-->
-<!--                android:autoLink="none"-->
-<!--                android:clickable="true"-->
-<!--                android:linksClickable="false"-->
-<!--                android:textSize="16sp"-->
-<!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
-<!--                tools:text="Физическое лицо" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/phisicalPersonTextView"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/margin4"-->
+            <!--                android:autoLink="none"-->
+            <!--                android:clickable="true"-->
+            <!--                android:linksClickable="false"-->
+            <!--                android:textSize="16sp"-->
+            <!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
+            <!--                tools:text="Физическое лицо" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/phisicalPersonTextInputLayout"
@@ -179,17 +196,17 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/cellTxtView"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="@dimen/margin4"-->
-<!--                android:fontFamily="monospace"-->
-<!--                android:inputType="textMultiLine"-->
-<!--                android:textAlignment="viewStart"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="Ячейка" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/cellTxtView"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="@dimen/margin4"-->
+            <!--                android:fontFamily="monospace"-->
+            <!--                android:inputType="textMultiLine"-->
+            <!--                android:textAlignment="viewStart"-->
+            <!--                android:textSize="16sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                tools:text="Ячейка" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/cellTextInputLayout"
@@ -233,41 +250,41 @@
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
+            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content">-->
 
-<!--                <EditText-->
-<!--                    android:id="@+id/countEditText"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_margin="@dimen/margin4"-->
-<!--                    android:ems="10"-->
-<!--                    android:gravity="right"-->
-<!--                    android:inputType="numberDecimal"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toStartOf="@id/itemMeasureOfUnitTitleTextView"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    tools:text="0.00" />-->
+            <!--                <EditText-->
+            <!--                    android:id="@+id/countEditText"-->
+            <!--                    android:layout_width="0dp"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_margin="@dimen/margin4"-->
+            <!--                    android:ems="10"-->
+            <!--                    android:gravity="right"-->
+            <!--                    android:inputType="numberDecimal"-->
+            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                    app:layout_constraintEnd_toStartOf="@id/itemMeasureOfUnitTitleTextView"-->
+            <!--                    app:layout_constraintStart_toStartOf="parent"-->
+            <!--                    app:layout_constraintTop_toTopOf="parent"-->
+            <!--                    tools:text="0.00" />-->
 
-<!--                <TextView-->
-<!--                    android:id="@+id/itemMeasureOfUnitTitleTextView"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:layout_margin="@dimen/margin4"-->
-<!--                    android:gravity="left|center_vertical"-->
-<!--                    android:paddingBottom="@dimen/margin4"-->
-<!--                    android:textAlignment="viewStart"-->
-<!--                    android:textSize="18sp"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toEndOf="@id/countEditText"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    tools:layout_constraintTop_toTopOf="parent"-->
-<!--                    tools:text="Ед. изм." />-->
+            <!--                <TextView-->
+            <!--                    android:id="@+id/itemMeasureOfUnitTitleTextView"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="0dp"-->
+            <!--                    android:layout_margin="@dimen/margin4"-->
+            <!--                    android:gravity="left|center_vertical"-->
+            <!--                    android:paddingBottom="@dimen/margin4"-->
+            <!--                    android:textAlignment="viewStart"-->
+            <!--                    android:textSize="18sp"-->
+            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                    app:layout_constraintStart_toEndOf="@id/countEditText"-->
+            <!--                    app:layout_constraintTop_toTopOf="parent"-->
+            <!--                    tools:layout_constraintTop_toTopOf="parent"-->
+            <!--                    tools:text="Ед. изм." />-->
 
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/countTextInputLayout"
@@ -284,7 +301,7 @@
                     android:id="@+id/countEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:enabled="false"
+                    android:enabled="true"
                     android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
                     android:maxLines="1" />
@@ -318,13 +335,6 @@
                 android:textSize="16sp"
                 android:textStyle="italic"
                 tools:text="Ответственный" />
-
-            <Button
-                android:id="@+id/buttonApply"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="@string/apply_text" />
 
         </LinearLayout>
     </ScrollView>
