--- a/app/src/main/res/layout/fragment_table_scan.xml
+++ b/app/src/main/res/layout/fragment_table_scan.xml
@@ -66,19 +66,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/completeAndSendBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/complete_and_send_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainMenuFragment" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tableScanLayout"
+        app:layout_constraintTop_toBottomOf="@id/tableItemScanLayout"
         tools:itemCount="10"
-        tools:listitem="@layout/table_scan_item_layout" />
+        tools:listitem="@layout/table_scan_item_layout">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tableScanLayout"
+        android:id="@+id/tableItemScanLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin4"
@@ -86,7 +101,7 @@
         android:layout_marginEnd="@dimen/margin4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainMenuFragment">
+        app:layout_constraintTop_toBottomOf="@id/completeAndSendBtn">
 
         <TextView
             android:id="@+id/headerTitleTextView"
@@ -98,6 +113,8 @@
             android:paddingStart="2dp"
             android:paddingEnd="2dp"
             android:text="@string/header_nomenclature"
+            android:textAlignment="center"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/headerCountTextView"
             app:layout_constraintHorizontal_bias="0.5"
@@ -116,6 +133,8 @@
             android:paddingStart="2dp"
             android:paddingEnd="2dp"
             android:text="@string/header_quantity"
+            android:textAlignment="center"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/headerUnitOfMeasureTextView"
             app:layout_constraintHorizontal_bias="0.5"
@@ -135,6 +154,8 @@
             android:paddingStart="2dp"
             android:paddingEnd="2dp"
             android:text="@string/header_unit_of_measurement"
+            android:textAlignment="center"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/headerTitleTextView"
             app:layout_constraintEnd_toStartOf="@+id/headerCellTextView"
             app:layout_constraintHorizontal_bias="0.5"
@@ -154,6 +175,8 @@
             android:paddingStart="2dp"
             android:paddingEnd="2dp"
             android:text="@string/header_cell"
+            android:textAlignment="center"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/headerTitleTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
