--- a/app/src/main/res/layout/documents_headers_init_dialog.xml
+++ b/app/src/main/res/layout/documents_headers_init_dialog.xml
@@ -34,6 +34,32 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/counterpartyTextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:hint="@string/counterparty_or_inn_text"
+                app:errorEnabled="true"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconContentDescription="@string/counterparty_or_inn_text"
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                app:helperTextEnabled="true">
+
+                <AutoCompleteTextView
+                    android:id="@+id/counterpartyTextEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
+                    tools:text = "@tools:sample/lorem[20]"
+                    android:inputType="text" >
+                </AutoCompleteTextView>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/divisionTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
@@ -122,6 +148,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/incoming_date_text"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_baseline_calendar_24"
+                app:endIconContentDescription="@string/incoming_date_text"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -129,7 +158,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
-                    android:inputType="date"
+                    android:editable="false"
+                    android:inputType="none"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
