--- a/app/src/main/res/layout/fragment_table_scan.xml
+++ b/app/src/main/res/layout/fragment_table_scan.xml
@@ -66,6 +66,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toTopOf="@id/infoTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/completeAndSendBtn"
         android:layout_width="match_parent"
@@ -79,21 +90,35 @@
 
     <TextView
         android:id="@+id/infoTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/my_border"
         android:ellipsize="marquee"
         android:fontFamily="monospace"
         android:padding="4dp"
         android:textColor="@color/light_blue_900"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/documentDetailsImageButton"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/documentDetailsImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/document_details_text"
+        android:minHeight="48dp"
+        android:src="@drawable/ic_baseline_assignment_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/infoTextView"
+        app:layout_constraintTop_toTopOf="@id/infoTextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
