--- a/app/src/main/res/layout/table_scan_item_layout.xml
+++ b/app/src/main/res/layout/table_scan_item_layout.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:id="@+id/titleTextView"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/my_border"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical"
@@ -36,7 +36,7 @@
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Номенклатура" />
+                tools:text="@tools:sample/lorem[100]" />
 
             <TextView
                 android:id="@+id/countTextView"
@@ -77,7 +77,7 @@
             <TextView
                 android:id="@+id/cellTextView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:background="@drawable/my_border"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical"
